ass5_18CS30051.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    ELLIPSIS
    HASH


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 F: %empty

    3 W: %empty

    4 D: %empty

    5 X: %empty

    6 N: %empty

    7 changetable: %empty

    8 primary_expression: IDENTIFIER
    9                   | INTEGER_CONSTANT
   10                   | FLOATING_CONSTANT
   11                   | CHARACTER_CONSTANT
   12                   | STRING_LITERAL
   13                   | ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE

   14 postfix_expression: primary_expression
   15                   | postfix_expression SQUARE_BRACKET_OPEN expression SQUARE_BRACKET_CLOSE
   16                   | postfix_expression ROUND_BRACKET_OPEN argument_expression_list_opt ROUND_BRACKET_CLOSE
   17                   | postfix_expression DOT IDENTIFIER
   18                   | postfix_expression IMPLIES IDENTIFIER
   19                   | postfix_expression INC
   20                   | postfix_expression DEC
   21                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
   22                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

   23 argument_expression_list_opt: argument_expression_list
   24                             | %empty

   25 argument_expression_list: assignment_expression
   26                         | argument_expression_list COMMA assignment_expression

   27 unary_expression: postfix_expression
   28                 | INC unary_expression
   29                 | DEC unary_expression
   30                 | unary_operator cast_expression
   31                 | SIZEOF unary_expression
   32                 | SIZEOF ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE

   33 unary_operator: BITWISE_AND
   34               | MUL
   35               | ADD
   36               | SUB
   37               | BITWISE_NOT
   38               | EXCLAIM

   39 cast_expression: unary_expression
   40                | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE cast_expression

   41 multiplicative_expression: cast_expression
   42                          | multiplicative_expression MUL cast_expression
   43                          | multiplicative_expression DIV cast_expression
   44                          | multiplicative_expression MOD cast_expression

   45 additive_expression: multiplicative_expression
   46                    | additive_expression ADD multiplicative_expression
   47                    | additive_expression SUB multiplicative_expression

   48 shift_expression: additive_expression
   49                 | shift_expression SHIFT_LEFT additive_expression
   50                 | shift_expression SHIFT_RIGHT additive_expression

   51 relational_expression: shift_expression
   52                      | relational_expression BIT_SL shift_expression
   53                      | relational_expression BIT_SR shift_expression
   54                      | relational_expression LTE shift_expression
   55                      | relational_expression GTE shift_expression

   56 equality_expression: relational_expression
   57                    | equality_expression EQ relational_expression
   58                    | equality_expression NEQ relational_expression

   59 and_expression: equality_expression
   60               | and_expression BITWISE_AND equality_expression

   61 exclusive_or_expression: and_expression
   62                        | exclusive_or_expression BITWISE_XOR and_expression

   63 inclusive_or_expression: exclusive_or_expression
   64                        | inclusive_or_expression BITWISE_OR exclusive_or_expression

   65 logical_and_expression: inclusive_or_expression
   66                       | logical_and_expression N AND M inclusive_or_expression

   67 logical_or_expression: logical_and_expression
   68                      | logical_or_expression N OR M logical_and_expression

   69 conditional_expression: logical_or_expression
   70                       | logical_or_expression N QUESTION M expression N COLON M conditional_expression

   71 assignment_expression: conditional_expression
   72                      | unary_expression assignment_operator assignment_expression

   73 assignment_operator: ASSIGN
   74                    | STAR_EQ
   75                    | DIV_EQ
   76                    | MOD_EQ
   77                    | ADD_EQ
   78                    | SUB_EQ
   79                    | SL_EQ
   80                    | SR_EQ
   81                    | BITWISE_AND_EQ
   82                    | BITWISE_XOR_EQ
   83                    | BITWISE_OR_EQ

   84 expression: assignment_expression
   85           | expression COMMA assignment_expression

   86 constant_expression: conditional_expression

   87 declaration: declaration_specifiers init_declarator_list SEMICOLON
   88            | declaration_specifiers SEMICOLON

   89 declaration_specifiers: storage_class_specifier declaration_specifiers
   90                       | storage_class_specifier
   91                       | type_specifier declaration_specifiers
   92                       | type_specifier
   93                       | type_qualifier declaration_specifiers
   94                       | type_qualifier
   95                       | function_specifier declaration_specifiers
   96                       | function_specifier

   97 init_declarator_list: init_declarator
   98                     | init_declarator_list COMMA init_declarator

   99 init_declarator: declarator
  100                | declarator ASSIGN initializer

  101 storage_class_specifier: EXTERN
  102                        | STATIC
  103                        | AUTO
  104                        | REGISTER

  105 type_specifier: VOID
  106               | CHAR
  107               | SHORT
  108               | INT
  109               | LONG
  110               | FLOAT
  111               | DOUBLE
  112               | SIGNED
  113               | UNSIGNED
  114               | _BOOL
  115               | _COMPLEX
  116               | _IMAGINARY
  117               | enum_specifier

  118 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  119                         | type_qualifier specifier_qualifier_list_opt

  120 specifier_qualifier_list_opt: %empty
  121                             | specifier_qualifier_list

  122 enum_specifier: ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  123               | ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  124               | ENUM IDENTIFIER

  125 identifier_opt: %empty
  126               | IDENTIFIER

  127 enumerator_list: enumerator
  128                | enumerator_list COMMA enumerator

  129 enumerator: IDENTIFIER
  130           | IDENTIFIER ASSIGN constant_expression

  131 type_qualifier: CONST
  132               | RESTRICT
  133               | VOLATILE

  134 function_specifier: INLINE

  135 declarator: pointer direct_declarator
  136           | direct_declarator

  137 direct_declarator: IDENTIFIER
  138                  | ROUND_BRACKET_OPEN declarator ROUND_BRACKET_CLOSE
  139                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  140                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list SQUARE_BRACKET_CLOSE
  141                  | direct_declarator SQUARE_BRACKET_OPEN assignment_expression SQUARE_BRACKET_CLOSE
  142                  | direct_declarator SQUARE_BRACKET_OPEN SQUARE_BRACKET_CLOSE
  143                  | direct_declarator SQUARE_BRACKET_OPEN STATIC type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  144                  | direct_declarator SQUARE_BRACKET_OPEN STATIC assignment_expression SQUARE_BRACKET_CLOSE
  145                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list MUL SQUARE_BRACKET_CLOSE
  146                  | direct_declarator SQUARE_BRACKET_OPEN MUL SQUARE_BRACKET_CLOSE
  147                  | direct_declarator ROUND_BRACKET_OPEN changetable parameter_type_list ROUND_BRACKET_CLOSE
  148                  | direct_declarator ROUND_BRACKET_OPEN identifier_list ROUND_BRACKET_CLOSE
  149                  | direct_declarator ROUND_BRACKET_OPEN changetable ROUND_BRACKET_CLOSE

  150 type_qualifier_list_opt: %empty
  151                        | type_qualifier_list

  152 pointer: MUL type_qualifier_list_opt
  153        | MUL type_qualifier_list_opt pointer

  154 type_qualifier_list: type_qualifier
  155                    | type_qualifier_list type_qualifier

  156 parameter_type_list: parameter_list
  157                    | parameter_list COMMA DOTS

  158 parameter_list: parameter_declaration
  159               | parameter_list COMMA parameter_declaration

  160 parameter_declaration: declaration_specifiers declarator
  161                      | declaration_specifiers

  162 identifier_list: IDENTIFIER
  163                | identifier_list COMMA IDENTIFIER

  164 type_name: specifier_qualifier_list

  165 initializer: assignment_expression
  166            | CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
  167            | CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

  168 initializer_list: designation_opt initializer
  169                 | initializer_list COMMA designation_opt initializer

  170 designation_opt: %empty
  171                | designation

  172 designation: designator_list ASSIGN

  173 designator_list: designator
  174                | designator_list designator

  175 designator: SQUARE_BRACKET_OPEN constant_expression SQUARE_BRACKET_CLOSE
  176           | DOT IDENTIFIER

  177 statement: labeled_statement
  178          | compound_statement
  179          | expression_statement
  180          | selection_statement
  181          | iteration_statement
  182          | jump_statement

  183 loop_statement: labeled_statement
  184               | expression_statement
  185               | selection_statement
  186               | iteration_statement
  187               | jump_statement

  188 labeled_statement: IDENTIFIER COLON statement
  189                  | CASE constant_expression COLON statement
  190                  | DEFAULT COLON statement

  191 compound_statement: CURLY_BRACKET_OPEN X changetable block_item_list_opt CURLY_BRACKET_CLOSE

  192 block_item_list_opt: %empty
  193                    | block_item_list

  194 block_item_list: block_item
  195                | block_item_list M block_item

  196 block_item: declaration
  197           | statement

  198 expression_statement: expression SEMICOLON
  199                     | SEMICOLON

  200 selection_statement: IF ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement N
  201                    | IF ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement N ELSE M statement
  202                    | SWITCH ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE statement

  203 iteration_statement: WHILE W ROUND_BRACKET_OPEN X changetable M expression ROUND_BRACKET_CLOSE M loop_statement
  204                    | WHILE W ROUND_BRACKET_OPEN X changetable M expression ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN M block_item_list_opt CURLY_BRACKET_CLOSE
  205                    | DO D M statement M WHILE ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE SEMICOLON
  206                    | FOR F ROUND_BRACKET_OPEN X changetable declaration M expression_statement M expression N ROUND_BRACKET_CLOSE M loop_statement
  207                    | FOR F ROUND_BRACKET_OPEN X changetable expression_statement M expression_statement M expression N ROUND_BRACKET_CLOSE M loop_statement
  208                    | FOR F ROUND_BRACKET_OPEN X changetable declaration M expression_statement M expression N ROUND_BRACKET_CLOSE M CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE
  209                    | FOR F ROUND_BRACKET_OPEN X changetable expression_statement M expression_statement M expression N ROUND_BRACKET_CLOSE M CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

  210 jump_statement: GOTO IDENTIFIER SEMICOLON
  211               | CONTINUE SEMICOLON
  212               | BREAK SEMICOLON
  213               | RETURN expression SEMICOLON
  214               | RETURN SEMICOLON

  215 translation_unit: external_declaration
  216                 | translation_unit external_declaration

  217 external_declaration: function_definition
  218                     | declaration

  219 function_definition: declaration_specifiers declarator declaration_list_opt changetable CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

  220 declaration_list: declaration
  221                 | declaration_list declaration

  222 declaration_list_opt: %empty
  223                     | declaration_list


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258) 103
    BREAK (259) 212
    CASE (260) 189
    CHAR (261) 106
    CONST (262) 131
    CONTINUE (263) 211
    DEFAULT (264) 190
    DO (265) 205
    DOUBLE (266) 111
    ELSE (267) 201
    ENUM (268) 122 123 124
    EXTERN (269) 101
    FLOAT (270) 110
    FOR (271) 206 207 208 209
    GOTO (272) 210
    IF (273) 200 201
    INLINE (274) 134
    INT (275) 108
    LONG (276) 109
    REGISTER (277) 104
    RESTRICT (278) 132
    RETURN (279) 213 214
    SHORT (280) 107
    SIGNED (281) 112
    SIZEOF (282) 31 32
    STATIC (283) 102 143 144
    STRUCT (284)
    SWITCH (285) 202
    TYPEDEF (286)
    UNION (287)
    UNSIGNED (288) 113
    VOID (289) 105
    VOLATILE (290) 133
    WHILE (291) 203 204 205
    _BOOL (292) 114
    _COMPLEX (293) 115
    _IMAGINARY (294) 116
    IDENTIFIER <symp> (295) 8 17 18 124 126 129 130 137 162 163 176 188 210
    INTEGER_CONSTANT <intval> (296) 9
    FLOATING_CONSTANT <char_value> (297) 10
    CHARACTER_CONSTANT <char_value> (298) 11
    STRING_LITERAL <char_value> (299) 12
    SQUARE_BRACKET_OPEN (300) 15 139 140 141 142 143 144 145 146 175
    SQUARE_BRACKET_CLOSE (301) 15 139 140 141 142 143 144 145 146 175
    ROUND_BRACKET_OPEN (302) 13 16 21 22 32 40 138 147 148 149 200 201 202 203 204 205 206 207 208 209
    ROUND_BRACKET_CLOSE (303) 13 16 21 22 32 40 138 147 148 149 200 201 202 203 204 205 206 207 208 209
    CURLY_BRACKET_OPEN (304) 21 22 122 123 166 167 191 204 208 209 219
    CURLY_BRACKET_CLOSE (305) 21 22 122 123 166 167 191 204 208 209 219
    DOT (306) 17 176
    IMPLIES (307) 18
    INC (308) 19 28
    DEC (309) 20 29
    BITWISE_AND (310) 33 60
    MUL (311) 34 42 145 146 152 153
    ADD (312) 35 46
    SUB (313) 36 47
    BITWISE_NOT (314) 37
    EXCLAIM (315) 38
    DIV (316) 43
    MOD (317) 44
    SHIFT_LEFT (318) 49
    SHIFT_RIGHT (319) 50
    BIT_SL (320) 52
    BIT_SR (321) 53
    ELLIPSIS (322)
    LTE (323) 54
    GTE (324) 55
    EQ (325) 57
    NEQ (326) 58
    BITWISE_XOR (327) 62
    BITWISE_OR (328) 64
    AND (329) 66
    OR (330) 68
    QUESTION (331) 70
    COLON (332) 70 188 189 190
    SEMICOLON (333) 87 88 198 199 205 210 211 212 213 214
    DOTS (334) 157
    ASSIGN (335) 73 100 130 172
    STAR_EQ (336) 74
    DIV_EQ (337) 75
    MOD_EQ (338) 76
    ADD_EQ (339) 77
    SUB_EQ (340) 78
    SL_EQ (341) 79
    SR_EQ (342) 80
    BITWISE_AND_EQ (343) 81
    BITWISE_XOR_EQ (344) 82
    BITWISE_OR_EQ (345) 83
    COMMA (346) 22 26 85 98 123 128 157 159 163 167 169
    HASH (347)
    "then" (348)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    M <instr_number> (95)
        on left: 1
        on right: 66 68 70 195 200 201 203 204 205 206 207 208 209
    F (96)
        on left: 2
        on right: 206 207 208 209
    W (97)
        on left: 3
        on right: 203 204
    D (98)
        on left: 4
        on right: 205
    X (99)
        on left: 5
        on right: 191 203 204 206 207 208 209
    N <stat> (100)
        on left: 6
        on right: 66 68 70 200 201 206 207 208 209
    changetable (101)
        on left: 7
        on right: 147 149 191 203 204 206 207 208 209 219
    primary_expression <expr> (102)
        on left: 8 9 10 11 12 13
        on right: 14
    postfix_expression <A> (103)
        on left: 14 15 16 17 18 19 20 21 22
        on right: 15 16 17 18 19 20 27
    argument_expression_list_opt <num_params> (104)
        on left: 23 24
        on right: 16
    argument_expression_list <num_params> (105)
        on left: 25 26
        on right: 23 26
    unary_expression <A> (106)
        on left: 27 28 29 30 31 32
        on right: 28 29 31 39 72
    unary_operator <unaryOp> (107)
        on left: 33 34 35 36 37 38
        on right: 30
    cast_expression <A> (108)
        on left: 39 40
        on right: 30 40 41 42 43 44
    multiplicative_expression <expr> (109)
        on left: 41 42 43 44
        on right: 42 43 44 45 46 47
    additive_expression <expr> (110)
        on left: 45 46 47
        on right: 46 47 48 49 50
    shift_expression <expr> (111)
        on left: 48 49 50
        on right: 49 50 51 52 53 54 55
    relational_expression <expr> (112)
        on left: 51 52 53 54 55
        on right: 52 53 54 55 56 57 58
    equality_expression <expr> (113)
        on left: 56 57 58
        on right: 57 58 59 60
    and_expression <expr> (114)
        on left: 59 60
        on right: 60 61 62
    exclusive_or_expression <expr> (115)
        on left: 61 62
        on right: 62 63 64
    inclusive_or_expression <expr> (116)
        on left: 63 64
        on right: 64 65 66
    logical_and_expression <expr> (117)
        on left: 65 66
        on right: 66 67 68
    logical_or_expression <expr> (118)
        on left: 67 68
        on right: 68 69 70
    conditional_expression <expr> (119)
        on left: 69 70
        on right: 70 71 86
    assignment_expression <expr> (120)
        on left: 71 72
        on right: 25 26 72 84 85 139 141 143 144 165
    assignment_operator (121)
        on left: 73 74 75 76 77 78 79 80 81 82 83
        on right: 72
    expression <expr> (122)
        on left: 84 85
        on right: 13 15 70 85 198 200 201 202 203 204 205 206 207 208 209 213
    constant_expression (123)
        on left: 86
        on right: 130 175 189
    declaration (124)
        on left: 87 88
        on right: 196 206 208 218 220 221
    declaration_specifiers (125)
        on left: 89 90 91 92 93 94 95 96
        on right: 87 88 89 91 93 95 160 161 219
    init_declarator_list (126)
        on left: 97 98
        on right: 87 98
    init_declarator <symp> (127)
        on left: 99 100
        on right: 97 98
    storage_class_specifier (128)
        on left: 101 102 103 104
        on right: 89 90
    type_specifier (129)
        on left: 105 106 107 108 109 110 111 112 113 114 115 116 117
        on right: 91 92 118
    specifier_qualifier_list (130)
        on left: 118 119
        on right: 121 164
    specifier_qualifier_list_opt (131)
        on left: 120 121
        on right: 118 119
    enum_specifier (132)
        on left: 122 123 124
        on right: 117
    identifier_opt (133)
        on left: 125 126
        on right: 122 123
    enumerator_list (134)
        on left: 127 128
        on right: 122 123 128
    enumerator (135)
        on left: 129 130
        on right: 127 128
    type_qualifier (136)
        on left: 131 132 133
        on right: 93 94 119 154 155
    function_specifier (137)
        on left: 134
        on right: 95 96
    declarator <symp> (138)
        on left: 135 136
        on right: 99 100 138 160 219
    direct_declarator <symp> (139)
        on left: 137 138 139 140 141 142 143 144 145 146 147 148 149
        on right: 135 136 139 140 141 142 143 144 145 146 147 148 149
    type_qualifier_list_opt (140)
        on left: 150 151
        on right: 152 153
    pointer <sym_type> (141)
        on left: 152 153
        on right: 135 153
    type_qualifier_list (142)
        on left: 154 155
        on right: 139 140 143 145 151 155
    parameter_type_list (143)
        on left: 156 157
        on right: 147
    parameter_list (144)
        on left: 158 159
        on right: 156 157 159
    parameter_declaration (145)
        on left: 160 161
        on right: 158 159
    identifier_list (146)
        on left: 162 163
        on right: 148 163
    type_name (147)
        on left: 164
        on right: 21 22 32 40
    initializer <symp> (148)
        on left: 165 166 167
        on right: 100 168 169
    initializer_list (149)
        on left: 168 169
        on right: 21 22 166 167 169
    designation_opt (150)
        on left: 170 171
        on right: 168 169
    designation (151)
        on left: 172
        on right: 171
    designator_list (152)
        on left: 173 174
        on right: 172 174
    designator (153)
        on left: 175 176
        on right: 173 174
    statement <stat> (154)
        on left: 177 178 179 180 181 182
        on right: 188 189 190 197 200 201 202 205
    loop_statement <stat> (155)
        on left: 183 184 185 186 187
        on right: 203 206 207
    labeled_statement <stat> (156)
        on left: 188 189 190
        on right: 177 183
    compound_statement <stat> (157)
        on left: 191
        on right: 178
    block_item_list_opt <stat> (158)
        on left: 192 193
        on right: 191 204 208 209 219
    block_item_list <stat> (159)
        on left: 194 195
        on right: 193 195
    block_item <stat> (160)
        on left: 196 197
        on right: 194 195
    expression_statement <expr> (161)
        on left: 198 199
        on right: 179 184 206 207 208 209
    selection_statement <stat> (162)
        on left: 200 201 202
        on right: 180 185
    iteration_statement <stat> (163)
        on left: 203 204 205 206 207 208 209
        on right: 181 186
    jump_statement <stat> (164)
        on left: 210 211 212 213 214
        on right: 182 187
    translation_unit (165)
        on left: 215 216
        on right: 0 216
    external_declaration (166)
        on left: 217 218
        on right: 215 216
    function_definition (167)
        on left: 219
        on right: 217
    declaration_list (168)
        on left: 220 221
        on right: 221 223
    declaration_list_opt (169)
        on left: 222 223
        on right: 219


State 0

    0 $accept: . translation_unit $end

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

  103 storage_class_specifier: AUTO .

    $default  reduce using rule 103 (storage_class_specifier)


State 2

  106 type_specifier: CHAR .

    $default  reduce using rule 106 (type_specifier)


State 3

  131 type_qualifier: CONST .

    $default  reduce using rule 131 (type_qualifier)


State 4

  111 type_specifier: DOUBLE .

    $default  reduce using rule 111 (type_specifier)


State 5

  122 enum_specifier: ENUM . identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  123               | ENUM . identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  124               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 125 (identifier_opt)

    identifier_opt  go to state 33


State 6

  101 storage_class_specifier: EXTERN .

    $default  reduce using rule 101 (storage_class_specifier)


State 7

  110 type_specifier: FLOAT .

    $default  reduce using rule 110 (type_specifier)


State 8

  134 function_specifier: INLINE .

    $default  reduce using rule 134 (function_specifier)


State 9

  108 type_specifier: INT .

    $default  reduce using rule 108 (type_specifier)


State 10

  109 type_specifier: LONG .

    $default  reduce using rule 109 (type_specifier)


State 11

  104 storage_class_specifier: REGISTER .

    $default  reduce using rule 104 (storage_class_specifier)


State 12

  132 type_qualifier: RESTRICT .

    $default  reduce using rule 132 (type_qualifier)


State 13

  107 type_specifier: SHORT .

    $default  reduce using rule 107 (type_specifier)


State 14

  112 type_specifier: SIGNED .

    $default  reduce using rule 112 (type_specifier)


State 15

  102 storage_class_specifier: STATIC .

    $default  reduce using rule 102 (storage_class_specifier)


State 16

  113 type_specifier: UNSIGNED .

    $default  reduce using rule 113 (type_specifier)


State 17

  105 type_specifier: VOID .

    $default  reduce using rule 105 (type_specifier)


State 18

  133 type_qualifier: VOLATILE .

    $default  reduce using rule 133 (type_qualifier)


State 19

  114 type_specifier: _BOOL .

    $default  reduce using rule 114 (type_specifier)


State 20

  115 type_specifier: _COMPLEX .

    $default  reduce using rule 115 (type_specifier)


State 21

  116 type_specifier: _IMAGINARY .

    $default  reduce using rule 116 (type_specifier)


State 22

  218 external_declaration: declaration .

    $default  reduce using rule 218 (external_declaration)


State 23

   87 declaration: declaration_specifiers . init_declarator_list SEMICOLON
   88            | declaration_specifiers . SEMICOLON
  219 function_definition: declaration_specifiers . declarator declaration_list_opt changetable CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

    IDENTIFIER          shift, and go to state 34
    ROUND_BRACKET_OPEN  shift, and go to state 35
    MUL                 shift, and go to state 36
    SEMICOLON           shift, and go to state 37

    init_declarator_list  go to state 38
    init_declarator       go to state 39
    declarator            go to state 40
    direct_declarator     go to state 41
    pointer               go to state 42


State 24

   89 declaration_specifiers: storage_class_specifier . declaration_specifiers
   90                       | storage_class_specifier .

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 25

   91 declaration_specifiers: type_specifier . declaration_specifiers
   92                       | type_specifier .

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 92 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 26

  117 type_specifier: enum_specifier .

    $default  reduce using rule 117 (type_specifier)


State 27

   93 declaration_specifiers: type_qualifier . declaration_specifiers
   94                       | type_qualifier .

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 94 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 28

   95 declaration_specifiers: function_specifier . declaration_specifiers
   96                       | function_specifier .

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 96 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 29

    0 $accept: translation_unit . $end
  216 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 47
    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 48
    function_definition      go to state 31


State 30

  215 translation_unit: external_declaration .

    $default  reduce using rule 215 (translation_unit)


State 31

  217 external_declaration: function_definition .

    $default  reduce using rule 217 (external_declaration)


State 32

  124 enum_specifier: ENUM IDENTIFIER .
  126 identifier_opt: IDENTIFIER .

    CURLY_BRACKET_OPEN  reduce using rule 126 (identifier_opt)
    $default            reduce using rule 124 (enum_specifier)


State 33

  122 enum_specifier: ENUM identifier_opt . CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  123               | ENUM identifier_opt . CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE

    CURLY_BRACKET_OPEN  shift, and go to state 49


State 34

  137 direct_declarator: IDENTIFIER .

    $default  reduce using rule 137 (direct_declarator)


State 35

  138 direct_declarator: ROUND_BRACKET_OPEN . declarator ROUND_BRACKET_CLOSE

    IDENTIFIER          shift, and go to state 34
    ROUND_BRACKET_OPEN  shift, and go to state 35
    MUL                 shift, and go to state 36

    declarator         go to state 50
    direct_declarator  go to state 41
    pointer            go to state 42


State 36

  152 pointer: MUL . type_qualifier_list_opt
  153        | MUL . type_qualifier_list_opt pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 150 (type_qualifier_list_opt)

    type_qualifier           go to state 51
    type_qualifier_list_opt  go to state 52
    type_qualifier_list      go to state 53


State 37

   88 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 88 (declaration)


State 38

   87 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   98 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMICOLON  shift, and go to state 54
    COMMA      shift, and go to state 55


State 39
